# InertiaCalculatorHybrid5

./: README.md  setup.py
project/: CMakeLists.txt  gui.py  gui.spec  inertia_calculator.cpp  inertia_calculator.h  inertia_wrapper.py  main.cpp
